# cargo-plsfmt

./: Cargo.toml  README.md
fmt_examples/: fmt.sh  macros.rs  test.rs
fmt_examples/prettyplease/: macros.rs  test.rs
fmt_examples/rustfmt/: test.rs
src/: comments.rs  lib.rs  macro_factory_binding.rs  macro_syntax.rs  model.rs  replace.rs  replacement.rs
src/macros/: mod.rs  select.rs  test.rs  test_helper.rs
