[package]
name = "cargo-plsfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
prettyplease = "0.2.29"
syn = { version = "2.0.98", features = ["visit"] }
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
clap = { version = "4.5.30", features = ["derive"] }
cargo_metadata = "0.19.1"
clap-cargo = "0.15.2"
glob = "0.3.2"